[package]
name = "name"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
logos = "0.14.0"
name_const = { version = "0.1.0", path = "../name-const" }